<resources>
    <string name="app_name">ՆԱՄ</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Կարգավորումներ</string>

    <string name="shushi">Շուշի</string>
    <string name="gallery">Ցուցասրահ</string>

    <string name="about">Մեր մասին</string>
    <string name="nam_about">
              «Նարեկացի» արվեստի միությունը (ՆԱՄ) "\n"
        բարեգործական հիմունքներով գործող և "\n"
        շահույթ չհետապնդող հասարակական "\n"
        կազմակերպություն է: Կրելով սուրբ Գրիգոր "\n"
        Նարեկացու անունը և առաջնորդվելով հոգևորի "\n"
        խորհրդով՝ միությունը կոչված է ծառայելու հայ "\n"
        արվեստին, մշակույթին և հոգևոր արժեքներին: "\n"
        Այս ոգով է հիմնադրվել «Նարեկացի» արվեստի "\n"
        միությունը 2000 թվականին ԱՄՆ-ում բարերար "\n"
        Նարեկ Հարությունյանի կողմից, իր ավագ եղբոր` "\n"
        Սարո Հարությունյանի, Հարկո Ինսենթիվզ "\n"
        ընկերության www.harcoweb.com և իրենց "\n"
        լուսահոգի հոր` Կարապետ Հարությունյանի "\n"
        հիմնական աջակցությամբ: "\n\n"

        2004 թվականին միությունն իր դռներն է բացել"\n"
        Երևանում և 2006 թվականին՝ Շուշիում:"\n\n"

        ՆԱՄ-ում բոլոր միջոցառումները կազմակերպվում "\n"
        են միության կողմից բացառապես անվճար "\n"
        հիմունքներով բոլոր այն մարդկանց համար, "\n"
        ովքեր դիմում են ՆԱՄ, համապատասխանում են "\n"
        միության որդեգրած սկզբունքներին ու "\n"
        չափանիշներին և ունեն ստեղծագործական "\n"
        ծրագիր, արժեք ներկայացնող ձեռնարկ կամ "\n"
        ցուցադրման ենթակա աշխատանքներ: "\n\n"

        Իր գործունեության ընթացքում ՆԱՄ-ը "\n"
        կազմակերպել և կյանքի է կոչել մի քանի "\n"
        տասնյակ հատուկ նախագծեր, ամեն տարի "\n"
        իրականացնում է 300-ից ավելի համերգներ, "\n"
        ցուցահանդեսներ, դասախոսություններ, "\n"
        վարպետության դասեր, ֆիլմերի "\n"
        ցուցադրություններ և այլն, լույս է"\n"
        ընծայել բազմաթիվ արժեքավոր "\n"
        հրատարակություններ, համագործակցում է "\n"
        հայ և օտարերկրացի շատ ստեղծագործողների, "\n"
        ինչպես նաև դեսպանատների հետ: "\n\n"

        «Նարեկացի» արվեստի միության Երևանի "\n"
        կենտրոնում գործում են «Նարեկացի» "\n"
        ժողովրդական նվագարանների նվագախումբը, "\n"
        «Նովա» ժողովրդական նվագարանների "\n"
        անսամբլը, «Նժդեհ» ազգագրական երգի, "\n"
        պարի խումբը և նկարչության մանկական "\n"
        դասարանը: Շուշիի կրթօջախ-կենտրոնում "\n"
        իրականացվում են տարբեր ուսուցողական "\n"
        ծրագրեր` կիթառի (հեղինակային երգ), "\n"
        գեղանկարչության, փայտափորագրության, "\n"
        մանրանկարչության, ասեղնագործության, "\n"
        լուսանկարչության, թատերական, պարի, "\n"
        հեքիաթասածի, ասմունքի, երգի, անգլերենի, "\n"
        արտթերապիայի մշտական դասընթացներ, "\n"
        ինչպես նաև բազմաբնույթ միջոցառումներ: "\n\n"

        ՆԱՄ-ի հատուկ ուշադրության կենտրոնում են"\n"
        հաշմանդամություն ունեցող մարդիկ, "\n"
        տաղանդավոր երեխաները, մարզերի "\n"
        երիտասարդ արվեստագետները: "\n"
        Բոլոր միջոցառումների մուտքը միշտ ազատ է: "\n\n"
    </string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Գլխավոր</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="notifications">Ծանուցումներ</string>
    <string name="settings">Կարգավորումներ</string>
    <string name="yerevan">Երեվան</string>
    <string name="contacts">Կոնտակտներ</string>
    <string name="naregatsi">Նարեկացի</string>
    <string name="nam_about_head">Նարեկացի Արվեստի Միություն</string>
    <string name="nam_about_subhead">Քո կապը մշակույթի հետ</string>
    <string name="title_activity_settings">Կարգավորումներ</string>
    <string name="language">Լեզու</string>
    <string name="app_lang_choice">Հեվելվածի լեզվի ընտրություն</string>
    <string name="save">Պահպանել</string>
    <string name="share">Կիսվել</string>
    <string name="donate">Աջակցել</string>
    <string name="communicate">Հետադարձ կապ</string>
    <string name="naregatsi_aplication_download_link">ՆԱՄ հավելվածի ներբեռնման հղում։</string>
    <string name="yerevan_armenia">Երևան, Հայաստան</string>
    <string name="vardanants16">Վարդանանց 16/1</string>
    <string name="shushi_artsakh">Շուշի, Արցախ</string>
    <string name="mouracan6">Մուրացան 6</string>


</resources>
