<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_icon"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/donate_icon"
            android:title="@string/donate" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_contacts"
                android:icon="@drawable/contacts_icon"
                android:title="@string/contacts" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

        </menu>
    </item>

</menu>
